fix(lists): align dot in vertical center of first text line of li

--- a/src/client/components/app-core/lists.css
+++ b/src/client/components/app-core/lists.css
@@ -41,11 +41,14 @@ ul.list > li::before,
 .list ul > li::before {
   content: '';
   display: block;
-  margin-top: 12px;
+  margin-top: .7em;
+  margin-top: calc(.7em - 3px / 2); /* Display the dot in the middle of the x height, based on the current font */
   width: 3px;
   height: 3px;
   background-color: var(--black);
   border-radius: 50%;
+  line-height: inherit;
+  font-size: inherit;
 }
 
 ol.numbered-list > li::before,
